# nfl-predictor

./: .gitignore  LICENSE  README.md  advanced_simulation.py  backtest.py  backtest_results.json  cron_setup.txt  epa_loader.py  injury_loader.py  main.py  pfr_scraper.py  player_impact.py  pyproject.toml  scheduled_run.py
.github/: copilot-instructions.md
.github/workflows/: nfl-predictions.yml
nfl_predictor/: __init__.py  backtest.py  cli.py  config.py  epa.py  injuries.py  intangibles.py  player_impact.py  scheduler.py  scraper.py  simulation.py  tiebreakers.py
