[project]
name = "nfl-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.14.3",
    "browser-use>=0.11.0",
    "groq>=0.37.1",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "tqdm>=4.66.0",
]
