[project]
name = "nfl-predictor"
version = "0.2.0"
description = "NFL playoff probability simulator with EPA-based modeling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.14.3",
    "browser-use>=0.11.0",
    "groq>=0.37.1",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.1",
    "nfl-data-py>=0.3.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "scipy>=1.15.0",
    "tqdm>=4.66.0",
]

[project.scripts]
nfl-predict = "nfl_predictor.cli:main"
nfl-scheduled = "nfl_predictor.scheduler:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["nfl_predictor*"]
exclude = ["cache*", "results*", "tests*"]
